--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'io.github.controlwear:virtualjoystick:1.8.0'
     testCompile 'junit:junit:4.12'
 }
